--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="container-fluid ">
         <select name="" id="difficulty">
-            <option value="">difficoltà 1</option>
-            <option value="">difficoltà 2</option>
-            <option value="">difficoltà 3</option>
+            <option value="difficoltà1">difficoltà 1</option>
+            <option value="difficoltà2">difficoltà 2</option>
+            <option value="difficoltà3">difficoltà 3</option>
         </select>
         <button id="play">play</button>
         <div id="campoMinato" class="d-flex mt-5 flex-wrap"></div>
